<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterBarberActivity">

    <TextView
        android:id="@+id/TVRegisterBarberTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register_barber"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVTittleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVRegisterBarberTittle" />

    <com.example.cepstun.cv.CustomEditText
        android:id="@+id/ETEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="name"
        android:background="@drawable/bg_et"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/plus_jakarta_sans"
        android:hint="@string/hint_name"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:paddingHorizontal="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TVTittleName"
        app:layout_constraintTop_toBottomOf="@+id/TVTittleName" />

    <TextView
        android:id="@+id/TVTittleCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/category"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/ETEmail"
        app:layout_constraintTop_toBottomOf="@+id/ETEmail" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_et"
        android:gravity="start"
        android:hint="Category"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/ETEmail"
        app:layout_constraintStart_toStartOf="@+id/ETEmail"
        app:layout_constraintTop_toBottomOf="@+id/TVTittleCategory"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="8dp"
        app:spinner_arrow_tint="@color/black"
        app:spinner_divider_color="@color/black"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.4dp"
        app:spinner_item_array="@array/category_barberRegister"
        app:spinner_item_height="46dp"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@drawable/bg_dropdown"
        app:spinner_popup_elevation="14dp" />

    <TextView
        android:id="@+id/TVTittleAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/address"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.example.cepstun.cv.CustomEditText
        android:id="@+id/ETAddress"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="name"
        android:background="@drawable/bg_et"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/plus_jakarta_sans"
        android:hint="@string/hint_address"
        android:imeOptions="actionNext"
        android:inputType="textPostalAddress"
        android:maxLength="25"
        android:paddingHorizontal="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TVTittleName"
        app:layout_constraintTop_toBottomOf="@+id/TVTittleAddress" />

    <TextView
        android:id="@+id/TVTittleCoordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/coordinate"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETAddress" />

    <com.example.cepstun.cv.CustomEditText
        android:id="@+id/ETCoordinate"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="name"
        android:background="@drawable/bg_et"
        android:clickable="false"
        android:focusable="false"
        android:drawableEnd="@drawable/ic_location"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/plus_jakarta_sans"
        android:hint="@string/hint_coordinate"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:paddingHorizontal="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TVTittleName"
        app:layout_constraintTop_toBottomOf="@+id/TVTittleCoordinate" />

    <TextView
        android:id="@+id/TVTittleTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/telephone"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETCoordinate" />

    <com.example.cepstun.cv.CustomEditText
        android:id="@+id/ETTelephone"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="name"
        android:background="@drawable/bg_et"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/plus_jakarta_sans"
        android:hint="@string/hint_telephone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="25"
        android:paddingHorizontal="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TVTittleName"
        app:layout_constraintTop_toBottomOf="@+id/TVTittleTelephone" />

    <TextView
        android:id="@+id/TVTittlePhotoBarber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/photo_barber"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETTelephone" />

    <com.example.cepstun.cv.CustomEditText
        android:id="@+id/ETPhotoBarber"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="name"
        android:background="@drawable/bg_et"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/plus_jakarta_sans"
        android:hint="@string/hint_photo_barber"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:paddingHorizontal="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TVTittleName"
        app:layout_constraintTop_toBottomOf="@+id/TVTittlePhotoBarber" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BContinue"
        android:layout_width="355dp"
        android:layout_height="44dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_login"
        android:enabled="false"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/button_continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>