<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ChooseUserActivity">

    <ImageView
        android:id="@+id/IVLogo2"
        android:layout_width="0dp"
        android:layout_height="143dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/logo2"
        android:src="@drawable/logo"
        android:transitionName="logo2"
        style="@style/logo_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LLCustomer"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVLogo2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/customerTittle"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/MCVCustomer"
            style="@style/MyCardView2"
            android:layout_width="260dp"
            android:layout_height="170dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="1dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/customer"
                android:src="@drawable/customer" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLBarber"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLCustomer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/barberTittle"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/MCVBarber"
            style="@style/MyCardView2"
            android:layout_width="260dp"
            android:layout_height="170dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="1dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/barber"
                android:src="@drawable/barber" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/BChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/button_choose"
        android:textAlignment="center"
        android:transitionName="button"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLBarber" />

</androidx.constraintlayout.widget.ConstraintLayout>